--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "vue-resource": "^1.0.3"
   },
   "dependencies": {
+    "flux": "^3.1.2",
+    "immutability-helper": "^2.1.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   }
 }
