--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "immutability-helper": "^2.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "whatwg-fetch": "^2.0.1"
   }
 }
